feat: endpoint to store internal-experiments (#237)
Resolves https://github.ibm.com/st4sd/st4sd-runtime-core/issues/282
